# rocat_sim

./: CMakeLists.txt  package.xml  pyproject.toml  setup.py
configs/: config.json  config.yaml
launch/: 0_param_pub.launch  1_go1_gazebo_sim.launch  2_controller_fsm_and_rviz.launch  3_throw_manager.launch  4_impact_checker.launch  4_success_fail_counter.launch  5_1_controller_pid.launch  5_controller_pid_and_nae_prediction.launch  6_nae_prediction.launch  7_mocap_y_up_to_z_up.launch  go1_catching.launch  go1_catching_sim.launch  go1_gazebo_sim.launch
rocat_sim.egg-info/: PKG-INFO  SOURCES.txt
rviz/: rviz.rviz
src/: basket_pub.py  impact_checker.py  mocap_y_up_to_z_up_node.py  robot_movement_debuger.py  robot_reset.py  throw_manager_node.py  throw_manager_node_olf.py  trajectory_simulation.py
src/rocat_sim.egg-info/: PKG-INFO  SOURCES.txt
src/utils/: plot_prediction.py  utils.py
